for merge (fixed checkboxes)

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,9 @@
                             <i class="fas fa-layer-group"></i> Группы
                         </a>
                     </li>
-                          <li>
-                        <a href="{{ url_for('profiles') }}" class="nav-link {% if request.endpoint == 'profiles' %}active{% endif %}">
-                            <i class="fas fa-layer-group"></i> Профили
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('profiles') }}">
+                            <i class="fas fa-id-card"></i> Профили
                         </a>
                     </li>
                 </ul>
