--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -5,10 +5,10 @@
 {% block content %}
 
     <div class="container">
-        <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="d-flex justify-content-between align-items-center ">
             <h1>Список профилей</h1>
             <a href="{{ url_for('add_profile') }}" class="export-button">
-                <i class="fas fa-plus"></i> Добавить профиль
+                <i class="fas fa-plus">Добавить профиль</i>
             </a>
         </div>
 
