--- a/templates/base.html
+++ b/templates/base.html
@@ -2,18 +2,21 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <body>
-    <!-- Фиксированное меню -->
-    <header class="navbar-fixed">
-        <div class="navbar-container">
-            <nav>
-                <ul class="nav-list">
+<!-- Фиксированное меню -->
+<header class="navbar-fixed">
+    <div class="navbar-container">
+        <nav>
+            <ul class="nav-list">
 
-                    <li>
-                        <a href="{{ url_for('index') }}" class="nav-link {% if request.endpoint == 'index' %}active{% endif %}">
+                <li>
+                    <a href="{{ url_for('index') }}" class="nav-link {% if request.endpoint == 'index' %}active{% endif %}">
                             <i class="fas fa-list"></i> Параметры
                         </a>
                     </li>
