--- a/templates/edit.html
+++ b/templates/edit.html
@@ -57,7 +57,7 @@
     </div>
 
     <button type="submit" class="submit-btn">Сохранить</button>
-    <a href="{{ url_for('index') }}" class="cancel-btn">Отмена</a>
+    <a href="{{ url_for('parameters.index') }}" class="cancel-btn">Отмена</a>
 </form>
 
 {% endblock %}
