--- a/templates/add.html
+++ b/templates/add.html
@@ -72,5 +72,5 @@
     </div>
 </div>
 
-<a href="{{ url_for('index') }}" class="cancel-btn">← Назад к списку</a>
+<a href="{{ url_for('parameters.index') }}" class="cancel-btn">← Назад к списку</a>
 {% endblock %}
