--- a/templates/add_profile.html
+++ b/templates/add_profile.html
@@ -59,7 +59,7 @@
         </div>
     </div>
     <button type="submit" class="btn btn-success">Сохранить</button>
-    <a href="{{ url_for('profiles') }}" class="btn btn-secondary">Отмена</a>
+    <a href="{{ url_for('profiles.list_profiles') }}" class="btn btn-secondary">Отмена</a>
 </form>
 
 <script>
