--- a/templates/base.html
+++ b/templates/base.html
@@ -16,17 +16,17 @@
             <ul class="nav-list">
 
                 <li>
-                    <a href="{{ url_for('index') }}" class="nav-link {% if request.endpoint == 'index' %}active{% endif %}">
+                    <a href="{{ url_for('parameters.index') }}" class="nav-link {% if request.endpoint == 'index' %}active{% endif %}">
                             <i class="fas fa-list"></i> Параметры
                         </a>
                     </li>
                     <li>
-                        <a href="{{ url_for('groups') }}" class="nav-link {% if request.endpoint == 'groups' %}active{% endif %}">
+                        <a href="{{ url_for('groups.list_groups') }}" class="nav-link {% if request.endpoint == 'groups' %}active{% endif %}">
                             <i class="fas fa-layer-group"></i> Группы
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('profiles') }}">
+                        <a class="nav-link" href="{{ url_for('profiles.list_profiles') }}">
                             <i class="fas fa-id-card"></i> Профили
                         </a>
                     </li>
