--- a/templates/groups.html
+++ b/templates/groups.html
@@ -6,8 +6,8 @@
 <body>
     <h1>Группы параметров</h1>
 
-    <a href="{{ url_for('export_to_xccdf_file') }}" class="export-button">Экспорт XCCDF</a>
-    <a href="{{ url_for('add_group') }}" class="export-button">+ Добавить группу</a>
+    <a href="{{ url_for('groups.export_to_xccdf_file') }}" class="export-button">Экспорт XCCDF</a>
+    <a href="{{ url_for('groups.add_group') }}" class="export-button">+ Добавить группу</a>
     
     <table class="groups-table">
         <thead>
@@ -24,7 +24,7 @@
                 <td>{{ group.name }}</td>
                 <td class="action-links">
                     <a href="#" class="edit-link">✏️</a>
-                    <a href="{{ url_for('delete_group', id=group.id) }}" 
+                    <a href="{{ url_for('groups.delete_group', id=group.id) }}"
                        onclick="return confirm('Удалить группу {{ group.name }}? Параметры останутся без группы.')">❌</a>
                 </td>
             </tr>
@@ -32,6 +32,6 @@
         </tbody>
     </table>
 <br>
-    <a href="{{ url_for('export_to_xccdf_file') }}" class="export-button">Экспорт в xccdf</a>
+    <a href="{{ url_for('groups.export_to_xccdf_file') }}" class="export-button">Экспорт в xccdf</a>
 </body>
 {% endblock %}
