--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 
 {% block title %}Название страницы{% endblock %}
@@ -7,8 +6,8 @@
 <body>
     <h1>Управление параметрами</h1>
     
-    <form id="exportForm" method="POST" action="{{ url_for('export_to_file') }}">
-        <a href="{{ url_for('add_parameter') }}" class="export-button">+ Добавить параметр</a>
+    <form id="exportForm" method="POST" action="{{ url_for('parameters.export_to_file') }}">
+        <a href="{{ url_for('parameters.add_parameter') }}" class="export-button">+ Добавить параметр</a>
         <div class="action-buttons">
             <button type="submit" class="action-button export-button" id="exportSelectedBtn">
                 <i class="fas fa-download"></i> Экспорт выбранных (<span id="selectedCount">0</span>)
@@ -60,8 +59,8 @@
                         </select>
                     </td>
                                         <td class="action-links">
-                        <a href="{{ url_for('edit_parameter', id=param.id) }}" title="Редактировать">✏️</a>
-                        <a href="{{ url_for('delete_parameter', id=param.id) }}" title="Удалить" onclick="return confirm('Вы уверены?')">❌</a>
+                        <a href="{{ url_for('parameters.edit_parameter', id=param.id) }}" title="Редактировать">✏️</a>
+                        <a href="{{ url_for('parameters.delete_parameter', id=param.id) }}" title="Удалить" onclick="return confirm('Вы уверены?')">❌</a>
                     </td>
                 </tr>
                 {% endfor %}
@@ -132,7 +131,7 @@
                     const paramId = this.getAttribute('data-param-id');
                     const groupId = this.value;
 
-                    fetch('{{ url_for("change_parameter_group_ajax") }}', {
+                    fetch('{{ url_for("parameters.change_parameter_group_ajax") }}', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
